--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -11,11 +11,15 @@
 <section>
     <div class="main col-lg-8  bg-white m-auto h-100 p-3 overflow-auto">
 
-        <!-- tab -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
                         role="tab" aria-controls="home" aria-selected="true">작성글
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="likes-tab" data-bs-toggle="tab" data-bs-target="#likes" type="button"
+                        role="tab" aria-controls="likes" aria-selected="false">좋아요한 글
                 </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -27,44 +31,62 @@
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="row p-0 m-0">
-
                     <div class="p-5">
+                        <div style="font-size: .5rem !important;">
 
-                            <!-- SERCTION 1 -->
-                            <div style="font-size: .5rem !important;">
-
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                    <h2 class="p-3">작성글</h2>
-                                </div>
-
-                                <!-- test -->
-                                <table class="table">
-                                    <thead class="text-center fw-bold">
-                                        <tr>
-                                            <th>제목</th>
-                                            <th>작성일시</th>
-                                            <th>좋아요</th>
-                                            <th>댓글수</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="userBoard : ${userBoards}">
-                                            <td th:text="${userBoard.title}"></td>
-                                            <td th:text="${userBoard.createdAt}"></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <h2 class="p-3">작성글</h2>
                             </div>
-                            <!-- // SERCTION 1 -->
 
+                            <table class="table">
+                                <thead class="text-center fw-bold">
+                                <tr>
+                                    <th>제목</th>
+                                    <th>작성일시</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="userBoard : ${userBoards}">
+                                    <td th:text="${userBoard.title}"></td>
+                                    <td>[[${#temporals.format(userBoard.createdAt, 'yyyy/MM/dd')}]]</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="likes" role="tabpanel" aria-labelledby="likes-tab">
+                <div class="row p-0 m-0">
+                    <div class="p-5">
+                        <div style="font-size: .5rem !important;">
+
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <h2 class="p-3">좋아요한 글</h2>
+                            </div>
+
+                            <table class="table">
+                                <thead class="text-center fw-bold">
+                                <tr>
+                                    <th>작성자</th>
+                                    <th>제목</th>
+                                    <th>작성일시</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                <div class="p-5">
+                <div class="row p-0 m-0">
                     <h2 class="p-3">비밀번호 변경</h2>
                     <form th:action="@{/user/update}" th:method="POST">
                         <input type="hidden" name="username" th:value="${userInfo.username}">
@@ -90,7 +112,6 @@
                 </div>
             </div>
         </div>
-        <!-- tab -->
 
     </div>
 </section>
