--- a/src/main/resources/templates/disclosure/list.html
+++ b/src/main/resources/templates/disclosure/list.html
@@ -113,29 +113,32 @@
                 </div>
             </div>
         </div>
+
         <div>
-            <table class="table">
-                <thead class="text-center">
-                <tr>
-                    <th>공시기업</th>
-                    <th>보고서명</th>
-                    <th>제출인</th>
-                    <th>접수일자</th>
-                </tr>
-                </thead>
-                <tbody style="font-size: .75rem;" class="text-center">
-                <tr th:each="report : ${reports}">
-                    <td th:text="${report.corpName}"></td>
-                    <td class="text-primary text-start">
-                        <a type="button" th:onclick="reportLink([[${report.rcpNo}]])"
-                           th:text="${report.reportNm}"></a>
-                    </td>
-                    <td th:text="${report.flrNm}"></td>
-                    <td th:text="${report.rceptDt}"></td>
-                </tr>
-                </tbody>
-            </table>
+
+            <!-- -->
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item" th:each="report : ${reports}">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" th:data-bs-target="'#r_' + ${report.rcpNo}" aria-expanded="true" th:aria-controls="'r_' + ${report.rcpNo}">
+                            [[${report.corpName}]] / [[${report.reportNm}]]    [ [[${#temporals.format(report.rceptDt, 'yyyy/MM/dd')}]] ]
+                        </button>
+                    </h2>
+                    <div th:id="'r_' + ${report.rcpNo}" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="py-2">
+                                <button type="button" class="btn btn-outline-dark"  th:onclick="reportLink([[${report.rcpNo}]])">새창으로 열기</button>
+                            </div>
+                            <iframe th:src="'https://dart.fss.or.kr/dsaf001/main.do?rcpNo='+${report.rcpNo}" title="내용" width="100%" style="height: 1000px; overflow: auto;"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- -->
+
         </div>
+
+
         <div class="d-flex justify-content-center" th:if="${reports.totalElements > 100}">
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
@@ -173,8 +176,6 @@
 <script th:src="@{/js/common.js}"></script>
 <script th:src="@{/js/disclosure.js}"></script>
 
-
 </body>
-
 
 </html>
