--- a/src/main/resources/templates/disclosure/list.html
+++ b/src/main/resources/templates/disclosure/list.html
@@ -2,15 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head('REPORT')">
 </head>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <body>
 <nav class="bg-dark" th:replace="layout/layout :: menu('REPORT')">
 </nav>
-
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
-        <h4 class="pt-2 mb-0" th:if="!${stock}">오늘의 공시</h4>
-        <div class="px-2 pt-3 pb-4 d-flex justify-content-between">
+    <div class="main col-lg-9 bg-white m-auto py-4 px-lx-3 px-md-2 px-sm-0">
+        <h4 class="p-2 mb-0" th:if="!${stock}">오늘의 공시</h4>
+        <div class="px-2 pt-1 pb-4 d-flex justify-content-between">
             <div th:if="!${stock}">
                 <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/today}"
                    th:classappend="${reportType == 'today'} ? 'btn btn-primary text-white'"><span> 전체 </span></a>
@@ -120,16 +119,23 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item" th:each="report : ${reports}">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" th:data-bs-target="'#r_' + ${report.rcpNo}" aria-expanded="true" th:aria-controls="'r_' + ${report.rcpNo}">
-                            [[${report.corpName}]] / [[${report.reportNm}]]    [ [[${#temporals.format(report.rceptDt, 'yyyy/MM/dd')}]] ]
+                        <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" th:data-bs-target="'#r_' + ${report.rcpNo}" aria-expanded="true" th:aria-controls="'r_' + ${report.rcpNo}" th:onclick="appendReport([[${report.rcpNo}]])">
+                            <div>
+                                <div class="text-danger pb-1">[[${report.corpName}]]</div>
+                                <div>[[${report.reportNm}]]</div>
+                            </div>
                         </button>
                     </h2>
                     <div th:id="'r_' + ${report.rcpNo}" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="py-2">
-                                <button type="button" class="btn btn-outline-dark"  th:onclick="reportLink([[${report.rcpNo}]])">새창으로 열기</button>
+                        <div class="px-0 accordion-body">
+                            <div class="pt-2 pb-4 px-2">
+                                <button type="button" class="btn btn-outline-dark p-0" style="font-size: .75rem;" th:onclick="reportLink([[${report.rcpNo}]])">새창으로 열기</button>
                             </div>
-                            <iframe th:src="'https://dart.fss.or.kr/dsaf001/main.do?rcpNo='+${report.rcpNo}" title="내용" width="100%" style="height: 1000px; overflow: auto;"></iframe>
+                            <div th:id="'a_' + ${report.rcpNo}">
+
+                            </div>
+<!--                            <iframe th:src="${report.dcmUrl}" title="내용" width="100%" style="min-height: 450px; overflow: auto;"></iframe>-->
+<!--                            <iframe th:src="'http://dart.fss.or.kr/dsaf001/main.do?rcpNo='+${report.rcpNo}" title="내용" width="100%" style="min-height: 450px; overflow: auto;"></iframe>-->
                         </div>
                     </div>
                 </div>
@@ -138,8 +144,8 @@
 
         </div>
 
-
-        <div class="d-flex justify-content-center" th:if="${reports.totalElements > 100}">
+        <br>
+        <div class="d-flex justify-content-center" th:if="${reports.totalElements > 10}">
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
 
