--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -2,36 +2,60 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head('STOCK')">
 </head>
+<script th:src="@{/js/common.js}"></script>
 
 <body>
 <nav class="bg-dark" th:replace="layout/layout :: menu('STOCK')">
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 px-md-3 py-4 overflow-auto">
+    <div class="main col-lg-8 bg-white m-auto px-md-3 py-4">
         <h4 class="pt-2 px-3">
             <span class="text-primary" th:text="${stock.stockName}"></span>
             <span th:text="${stock.stockId}"></span>
-            <span class="badge bg-warning text-dark" th:if="${stock.market} == 'p'">
+            <span class="badge bg-danger text-white pt-1 pb-0" th:if="${stock.market} == 'p'">
                 <span>KOSPI</span>
             </span>
-            <span class="badge bg-warning text-dark" th:if="${stock.market} == 'd'">
+            <span class="badge bg-danger text-white pt-1 pb-0" th:if="${stock.market} == 'd'">
                 <span>KOSDAQ</span>
             </span>
+            <span class="badge bg-secondary text-white pt-1 pb-0" th:onclick="corpAnalisys('home', [[${stock.homepage}]])" style="cursor: pointer;">
+                <i class="fa fa-home"></i>
+            </span>
         </h4>
+        <div class="pt-2 px-3">
+            <button class="btn text-white p-1 fw-bold" id="naverBtn" th:onclick="corpAnalisys('naver', [[${stock.stockId}]])">
+                NAVER
+            </button>
+            <button class="btn text-white p-1 fw-bold" id="fnguideBtn" th:onclick="corpAnalisys('fnguide', [[${stock.stockId}]])">
+                FN가이드
+            </button>
+            <button class="btn text-white p-1 fw-bold" id="irgoBtn" th:onclick="corpAnalisys('irgo', [[${stock.stockId}]])">
+                IRGO
+            </button>
 
+            <!-- -->
+            <div class="d-none">
+                <form action="http://consensus.hankyung.com/apps.analysis/analysis.list">
+                    <input type="text" name="search_text" value="삼성전자">
+                    <button class="btn btn-dark" type="submit">한경컨센서스</button>
+                </form>
+            </div>
+            <!-- -->
+
+        </div>
+        <br>
         <div class="row p-0 m-0">
             <div class="col-md-12 pt-2 pb-2">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="pb-2">기업개요</h4>
                         <div class="p-md-2">
                             <h5>업종</h5>
-                            <p class="pb-1" th:text="${stock.sector}"></p>
+                            <div class="pb-1" th:text="${stock.sector}"></div>
                             <br>
                             <div th:if="${stock.product}">
                                 <h5>주요제품</h5>
-                                <p class="pb-1" th:text="${stock.product}"></p>
+                                <div th:text="${stock.product}"></div>
                             </div>
                         </div>
                     </div>
@@ -39,16 +63,7 @@
             </div>
         </div>
 
-        <div class="row p-0 m-0 d-none">
-            <div class="col-md-12 py-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h4>재무정보</h4>
-                        <div style="background: #f3f3f3; height: 215px; width: 100%;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 
         <div class="row p-0 m-0">
 
